# langchain-tool-puffy

./: pyproject.toml
langchain_puffy/: __init__.py  tool.py
