[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-puffy"
version = "0.1.0"
description = "LangChain tool for Puffy — local-first media extraction engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "susu-pro" }]
keywords = ["langchain", "media", "extraction", "youtube", "tiktok", "bilibili"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "langchain-core>=0.2",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/susu-pro/puffy"
Repository = "https://github.com/susu-pro/puffy"
